# friendOS

./: .env.example  .gitignore  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: deploy.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: auth.py  config.py  database.py  main.py
backend/app/api/routes/: contacts.py  dashboard.py  interactions.py  shortcuts.py  tags.py
backend/app/models/: __init__.py  contact.py  interaction.py  tag.py
backend/app/repositories/: __init__.py  contact.py  interaction.py  tag.py
backend/app/schemas/: __init__.py  contact.py  dashboard.py  interaction.py  tag.py
backend/config/: .env.example
backend/migrations/: env.py
backend/migrations/versions/: 2025_01_01_0000-initial_schema.py  2025_01_02_0000-backfill_last_contacted_at.py
backend/scripts/start/: app.sh
frontend/: Dockerfile.dev  index.html  package.json  vite.config.ts
frontend/public/: manifest.webmanifest
frontend/src/: main.tsx  styles.css
frontend/src/components/features/: ContactCard.tsx  ContactForm.tsx  InteractionForm.tsx  InteractionList.tsx  QuickLogDialog.tsx  StatsCard.tsx
frontend/src/components/layout/: AppLayout.tsx  Sidebar.tsx
frontend/src/components/ui/: avatar.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  label.tsx  select.tsx  switch.tsx  textarea.tsx  tooltip.tsx
frontend/src/hooks/: queries.ts
frontend/src/lib/: api.ts  auth.ts  utils.ts
frontend/src/routes/: api-reference.tsx  callback.tsx  dashboard.tsx  login.tsx  plugins.tsx  tags.tsx
(+2 files in other folders)
